# NocturneRecomp

./: .gitattributes  .gitignore  .gitmodules  .sdk-version  CMakeLists.txt  README.md  nocturnerecomp_config.toml  nocturnerecomp_manifest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  patch-mod-request.md
.github/workflows/: _build.yml  ci.yml  release.yml
docs/: dumping-and-replacing-assets.md  making-mods.md  reverse-engineering.md
mods_src/common/include/rexmod/: text_patch.h
mods_src/common/mod_cmake/: rexmod.cmake
mods_src/game_symbols/: mod.toml  mod_main.cpp
mods_src/graphics_settings/: CMakeLists.txt  mod.toml  mod_main.cpp
mods_src/memory_peek/: mod.toml  mod_main.cpp
mods_src/player_stats/: CMakeLists.txt  mod.toml  mod_main.cpp
mods_src/ui_color/: CMakeLists.txt  mod.toml  mod_main.cpp
mods_src/xex_patch_potion/: CMakeLists.txt  mod.toml  mod_main.cpp
mods_src/xex_patch_red_rust/: CMakeLists.txt  mod.toml  mod_main.cpp
scripts/: bar.sh  build.py  build_no_codegen.py  download-sdk.py  extract-game.py  extract_tu.py  gen-icon.py  run.py
scripts/re/: dump_xex_image.py  rebuild_xex_unencrypted.py  scan_guest_memory.py
src/: accent_color.cpp  audio_player.cpp  audio_player.h  main.cpp  nocturnerecomp_app.h  nocturnerecomp_fp_guard.h  nocturnerecomp_hooks.cpp  track_names.h
